--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-calendars": "^1.1299.0",
+    "react-native-currency-input": "^1.1.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-paper": "^5.8.0",
     "react-native-popup-menu": "^0.16.1",
